# DACSC

./: CMakeCache.txt  CMakeLists.txt  Cli  Makefile  README.md  Serv  ServeurHopital  TerminalClient  cli.cpp  cmake_install.cmake  serv.cpp  servConf.txt
BD_Hospital/: CreationBD  CreationBD.cpp
ClientConsultationBookerQt/: mainwindowclientconsultationbooker.cpp  mainwindowclientconsultationbooker.h
MyProtocolsLibrary/: CBP.cpp  CBP.h
MyQuerriesLibrary/: sqlQuerry.cpp  sqlQuerry.h
MySocketLibrary/: TCP.cpp  TCP.h
ServHopital/: ServeurHopital.cpp  ServeurHopital.h
